@@ -55,6 +55,7 @@ $environmental_variables = array(
 	'ob' => 'OPENBENCHMARKING_ID',
 	'sched' => 'SCHEDULE_ID',
 	'lip' => 'LOCAL_IP',
+	'l' => 'LOGS',
 	'j' => 'JSON',
 	'composite_xml' => 'COMPOSITE_XML',
 	'composite_xml_gz' => 'COMPOSITE_XML_GZ',
